--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "angularjs-seed",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "name": "art.outlook",
+  "description": "A website for Susy's artwork.",
+  "repository": "https://github.com/s5b/art.outlook",
   "devDependencies": {
-    "phantomjs" : "~1.9",
-    "karma" : "~0.10",
-    "karma-junit-reporter" : "~0.1",
-    "karma-jasmine" : "~0.1",
-    "karma-ng-scenario" : "~0.1"
+    "phantomjs": "~1.9",
+    "karma": "~0.10.8",
+    "karma-junit-reporter": "~0.2.1",
+    "karma-jasmine": "~0.1.5",
+    "karma-ng-scenario": "~0.1",
+    "karma-script-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.1",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.2",
+    "karma-coffee-preprocessor": "~0.1.1",
+    "requirejs": "~2.1.9",
+    "karma-requirejs": "~0.2.0",
+    "karma-phantomjs-launcher": "~0.1.1"
   }
 }
