--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "art.outlook",
-  "description": "A website for Susy's artwork.",
-  "repository": "https://github.com/s5b/art.outlook",
-  "devDependencies": {
-    "phantomjs": "~1.9",
-    "karma": "~0.10.8",
-    "karma-junit-reporter": "~0.2.1",
-    "karma-jasmine": "~0.1.5",
-    "karma-ng-scenario": "~0.1",
-    "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.1",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.2",
-    "karma-coffee-preprocessor": "~0.1.1",
-    "requirejs": "~2.1.9",
-    "karma-requirejs": "~0.2.0",
-    "karma-phantomjs-launcher": "~0.1.1"
-  }
+    "name": "art.outlook",
+    "description": "A website for Susy's artwork.",
+    "repository": "https://github.com/s5b/art.outlook",
+    "devDependencies": {
+        "grunt": "~0.4.0",
+        "grunt-contrib-clean": "*",
+        "grunt-contrib-cssmin": "*",
+        "grunt-contrib-sass": "*",
+        "grunt-contrib-uglify": "*",
+        "grunt-contrib-watch": "*",
+        "grunt-cssc": "*",
+        "grunt-htmlhint": "*",
+        "grunt-contrib-copy": "*",
+        "grunt-jekyll": "*",
+        "matchdep": "*",
+        "phantomjs": "~1.9",
+        "karma": "~0.10.8",
+        "karma-junit-reporter": "~0.2.1",
+        "karma-jasmine": "~0.1.5",
+        "karma-ng-scenario": "~0.1",
+        "karma-script-launcher": "~0.1.0",
+        "karma-chrome-launcher": "~0.1.1",
+        "karma-html2js-preprocessor": "~0.1.0",
+        "karma-firefox-launcher": "~0.1.2",
+        "karma-coffee-preprocessor": "~0.1.1",
+        "requirejs": "~2.1.9",
+        "karma-requirejs": "~0.2.0",
+        "karma-phantomjs-launcher": "~0.1.1"
+    }
 }
